# RoboSim

./: CMakeLists.txt  Files.qrc  README.md  default_plan.json  dragdrop.cpp  dragdrop.h  draw.cpp  draw.h  edit.cpp  edit.h  edit.ui  editwindow.cpp  editwindow.h  editwindow.ui  house.cpp  house.h  houseparser.cpp  houseparser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  pathingalgorithms.cpp  pathingalgorithms.h  report.cpp  report.h  report.ui  reportwindow.cpp  reportwindow.h  reportwindow.ui  run.cpp  run.h  rundata.cpp  rundata.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  sim.cpp  sim.h  (+18 more)
Images/: HeatMapEx
